# omo_r1mini-foxy

./: .gitignore  README.md  README_KR.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/omo_r1mini/share/omo_r1mini/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini/share/omo_r1mini/cmake/: omo_r1miniConfig-version.cmake  omo_r1miniConfig.cmake
install/omo_r1mini/share/omo_r1mini/environment/: ament_prefix_path.dsv  path.dsv
install/omo_r1mini_bringup/lib/omo_r1mini_bringup/: omo_r1mini_mcu_node  omo_r1mini_motor_setting_node
install/omo_r1mini_bringup/share/omo_r1mini_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini_bringup/share/omo_r1mini_bringup/launch/: omo_r1mini_bringup.launch.py  omo_r1mini_mcu.launch.py
install/omo_r1mini_bringup/share/omo_r1mini_bringup/param/: omo_r1mini_lidar.yaml  omo_r1mini_mcu.yaml
install/omo_r1mini_cartographer/share/omo_r1mini_cartographer/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini_cartographer/share/omo_r1mini_cartographer/cmake/: omo_r1mini_cartographerConfig-version.cmake  omo_r1mini_cartographerConfig.cmake
install/omo_r1mini_cartographer/share/omo_r1mini_cartographer/config/: omo_r1mini_lidar.lua
install/omo_r1mini_cartographer/share/omo_r1mini_cartographer/environment/: ament_prefix_path.dsv  path.dsv
install/omo_r1mini_cartographer/share/omo_r1mini_cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py  occupancy_grid.launch.py
install/omo_r1mini_cartographer/share/omo_r1mini_cartographer/rviz/: omo_r1mini_cartographer.rviz
install/omo_r1mini_description/share/omo_r1mini_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini_description/share/omo_r1mini_description/cmake/: omo_r1mini_descriptionConfig-version.cmake  omo_r1mini_descriptionConfig.cmake
install/omo_r1mini_description/share/omo_r1mini_description/environment/: ament_prefix_path.dsv  path.dsv
install/omo_r1mini_description/share/omo_r1mini_description/launch/: omo_r1mini_description.launch.py  omo_r1mini_description_rviz.launch.py  omo_r1mini_state_publisher.launch.py
install/omo_r1mini_description/share/omo_r1mini_description/rviz/: model.rviz
install/omo_r1mini_description/share/omo_r1mini_description/urdf/: omo_r1mini.urdf
install/omo_r1mini_gazebo/share/omo_r1mini_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini_interfaces/share/omo_r1mini_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini_navigation2/share/omo_r1mini_navigation2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/omo_r1mini_teleop/lib/omo_r1mini_teleop/: teleop_joy  teleop_keyboard
install/omo_r1mini_teleop/share/omo_r1mini_teleop/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
omo_r1mini/: CMakeLists.txt  package.xml
omo_r1mini_bringup/: CMakeLists.txt  create_udev_rules.sh  package.xml  setup.cfg  setup.py
omo_r1mini_bringup/launch/: omo_r1mini_bringup_x4pro.launch.py  omo_r1mini_lidar.launch.py  omo_r1mini_lidar_x4pro.launch.py  omo_r1mini_mcu.launch.py  omo_r1mini_motor_setting.launch.py
omo_r1mini_bringup/omo_r1mini_bringup/scripts/: omo_packet_handler.py  omo_r1mini_mcu_node.py  omo_r1mini_motor_setting_node.py
omo_r1mini_bringup/omo_r1mini_bringup/scripts/driver/: packet.py  port.py  template.py
omo_r1mini_bringup/param/: omo_r1mini_lidar.yaml  omo_r1mini_lidar_x4_pro.yaml  omo_r1mini_mcu.yaml
omo_r1mini_bringup/scripts/: omo_r1mini_mcu_node.py
omo_r1mini_bringup/scripts/calc/: quaternion_from_euler.py
omo_r1mini_bringup/scripts/driver/: packet.py  template.py
omo_r1mini_bringup/srv/: Battery.srv
omo_r1mini_cartographer/: CMakeLists.txt  package.xml
omo_r1mini_cartographer/config/: omo_r1mini_lidar.lua
omo_r1mini_cartographer/launch/: cartographer.launch.py  cartographer_rviz.launch.py  occupancy_grid.launch.py
omo_r1mini_description/: CMakeLists.txt
omo_r1mini_description/launch/: omo_r1mini_description.launch.py  omo_r1mini_description_rviz.launch.py  omo_r1mini_state_publisher.launch.py
omo_r1mini_description/meshes/bases/: mini_frame.stl  mini_housing_l.stl
omo_r1mini_description/meshes/wheels/: caster_wheel.dae  caster_wheel_mount.dae  mini_caster.stl  mini_tire.stl
omo_r1mini_description/rviz/: model.rviz
omo_r1mini_description/urdf/: omo_r1mini.urdf
omo_r1mini_gazebo/: CMakeLists.txt  package.xml
omo_r1mini_gazebo/launch/: empty_world.launch.py  omo_r1mini.launch.py  robot_state_publisher.launch.py
omo_r1mini_gazebo/models/omo_r1mini/: model.sdf
omo_r1mini_gazebo/models/turtlebot3_world/: model.config
omo_r1mini_gazebo/worlds/empty_worlds/: omo_r1mini.model
omo_r1mini_gazebo/worlds/turtlebot3_worlds/: omo_r1mini.model
omo_r1mini_interfaces/: CMakeLists.txt
omo_r1mini_interfaces/srv/: ResetOdom.srv  SaveColor.srv
omo_r1mini_navigation2/: CMakeLists.txt  package.xml
omo_r1mini_navigation2/launch/: navigation2.launch.py  navigation2_rviz.launch.py
omo_r1mini_navigation2/map/: map.pgm  map.yaml
omo_r1mini_navigation2/param/: omo_r1mini.yaml
omo_r1mini_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
omo_r1mini_teleop/launch/: teleop_joy.launch.py
omo_r1mini_teleop/omo_r1mini_teleop/script/: teleop_joy.py  teleop_keyboard.py
omo_r1mini_teleop/param/: teleop_joy.param.yaml  teleop_joy.yaml
(+177 files in other folders)
