<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r1mini</name>
  <version>0.0.1</version>
  <description>
    ROS 2 packages for OMORobot R1 Mini
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/bishopearson/omo_r1mini</url>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>omo_r1mini_bringup</exec_depend>
  <exec_depend>omo_r1mini_cartographer</exec_depend>
  <exec_depend>omo_r1mini_description</exec_depend>
  <exec_depend>omo_r1mini_navigation2</exec_depend>
  <!-- <exec_depend>omo_r1mini_node</exec_depend> -->
  <exec_depend>omo_r1mini_teleop</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
