<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omo_r1mini_cartographer</name>
  <version>0.0.1</version>
  <description>
    ROS 2 launch scripts for cartographer
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/bishopearson/omo_r1mini</url>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>cartographer_ros</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
